tests/security/taintSpecializedMethod/output.txt
ERROR: TaintedData - input.hack:8:6 - Detected tainted HTML tags